Change internal stat keys from String to InternalStatisticKey